# faber

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  config.yaml  dev.sh  docker-compose.dev.yml  docker-compose.yml  dockerfile  flake.nix  seccomp.yaml  start-dev.sh  start.sh  supervisord.conf  test_comprehensive_limits.sh  test_resource_limits.sh  test_resource_tracking.sh  test_timeout.sh
.cargo/: config.toml
.cursor/rules/: cli-architecture.mdc  docker-workflow.mdc  documentation.mdc  project-overview.mdc  rust-development.mdc  security-sandboxing.mdc  testing-guidelines.mdc
.github/workflows/: deploy-docs.yml  docker-build-push.yml
config/: config.yaml  default.toml
crates/api/: Cargo.toml
crates/api/src/: error.rs  execution.rs  lib.rs  router.rs  types.rs  validation.rs
crates/api/src/middlewares/: mod.rs  request_id.rs  timing.rs
crates/api/src/routes/: execution.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  commands.rs  lib.rs  logging.rs  main.rs  serve.rs  types.rs
crates/cli/tests/: cli_integration_tests.rs  test_config.toml
crates/config/: Cargo.toml
crates/config/src/: api.rs  container.rs  error.rs  filesystem.rs  lib.rs  queue.rs  sandbox.rs  security.rs  types.rs
crates/container/: Cargo.toml
crates/container/src/: cgroups.rs  container.rs  error.rs  mounts.rs  seccomp.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/executor/: Cargo.toml
crates/executor/src/: error.rs  executor.rs  lib.rs  task_executor.rs  types.rs
crates/faber/: Cargo.toml
crates/faber-api/: Cargo.toml
crates/faber-api/src/: cache.rs  lib.rs  router.rs  serve.rs  state.rs
crates/faber-api/src/handlers/: execute.rs  health.rs  mod.rs
crates/faber-runtime/: Cargo.toml
crates/faber-runtime/src/: cgroup.rs  cgroup_struct.rs  container.rs  error.rs  lib.rs  prelude.rs  result.rs  runtime.rs  task.rs  utils.rs
crates/faber-runtime/src/cgroup/: builder.rs  config.rs  core.rs  mod.rs  task.rs
crates/faber-runtime/src/container/: builder.rs  config.rs  core.rs  mod.rs
crates/faber-runtime/src/runtime/: builder.rs  core.rs  mod.rs
crates/faber/src/: builder.rs  cgroup.rs  cgroups.rs  environment.rs  error.rs  executor.rs  lib.rs  prelude.rs  runtime.rs  runtime_builder.rs  types.rs  utils.rs
crates/math/: README.md
crates/math/src/: lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: error.rs  job.rs  lib.rs  queue_manager.rs  worker.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: cgroups.rs  container.rs  lib.rs  mounts.rs  namespaces.rs  privileges.rs  seccomp.rs  tests.rs
debug/: cgroup.sh  namespace-test.sh
dev-scripts/: cleanup-debug.sh  debug.sh  logs.sh  restart.sh  setup-debug.sh  status.sh
docker/: Dockerfile.dev  Dockerfile.prod  Dockerfile.test  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml
docker/dev/: Dockerfile  docker-compose.yaml  docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yaml  docker-compose.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: api.mdx  cli.mdx  configuration.mdx  core.mdx  executor.mdx  index.mdx  sandbox.mdx
docs/src/content/docs/guides/: api-reference.mdx  cli-usage.mdx  configuration.mdx  installation.mdx  security.mdx
docs/src/styles/: custom.css
scripts/: lldb-start.sh  run-sandbox-tests.sh
src/: cli.rs  config.rs  crash.rs  docs.rs  executor.rs  handlers.rs  lib.rs  logging.rs  main.rs
src/api/: docs.rs  execution.rs  handlers.rs  middleware.rs  mod.rs  router.rs  run.rs  serve.rs  server.rs  signal.rs  validation.rs
src/api/middlewares/: auth.rs  mod.rs  timing.rs
src/api/routes/: execution.rs  health.rs  mod.rs
src/cli/: logging.rs  main.rs
src/config/: api.rs  container.rs  faber.rs  lib.rs  loader.rs  mod.rs  queue.rs
src/config/data/: api.rs  container.rs  executor.rs  filesystem.rs  logging.rs  mod.rs  queue.rs  security.rs
src/container/: container.rs  errors.rs  execution.rs  filesystem.rs  mod.rs  mounts.rs  namespaces.rs  runtime.rs
src/container2/: mod.rs
src/executor/: error.rs  executor.rs  mod.rs  pool.rs  task.rs  task_executor.rs  worker.rs
src/queue/: error.rs  job.rs  queue_manager.rs  worker.rs
src/sandbox/: cgroups.rs  container.rs  error.rs  mod.rs  mounts.rs  namespaces.rs  privileges.rs  resource_limits.rs  sandbox.rs  seccomp.rs
src/worker/: instance.rs  mod.rs  pool.rs  task.rs
test-payloads/: c-compile.json  cpu-limit-test.json  fork-bomb.json  fork-limit-test.json  mem-limit-test.json  parallel.json  wall-time.json
