

[package]
name = "faber"
version = "0.1.0"
edition = "2024"
authors = ["Faber Team"]
description = "A secure code execution platform"
license = "MIT"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
axum = { version = "^0.8", features = ["macros"] }
tokio = { version = "^1.47", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "^0.2"
serde = { version = "^1.0", features = ["derive"] }
uuid = { version = "^1.17", features = ["v4", "serde"] }
thiserror = "^2.0"
clap = { version = "^4.5", features = ["derive"] }
nix = { version = "^0.30", features = [
    "process",
    "mount",
    "sched",
    "signal",
    "user",
    "fs",
] }
caps = "^0.5"
toml = "^0.9"
libc = "0.2.174"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
