[workspace]
members = ["crates/faber-runtime", "crates/faber-api"]
resolver = "2"

[package]
name = "faber"
version = "0.1.1"
edition = "2024"

[dependencies]
faber-api = { path = "crates/faber-api" }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
