[package]
name = "faber-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "faber_cli"
path = "src/lib.rs"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
faber-core = { path = "../core" }
faber-config = { path = "../config" }
faber-api = { path = "../api" }
faber-executor = { path = "../executor" }
clap = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
