[package]
name = "faber-cli"
version = "0.1.0"
edition = "2024"

[lib]
name = "faber_cli"
path = "src/lib.rs"

[[bin]]
name = "faber"
path = "src/main.rs"

[dependencies]
faber-config = { path = "../config" }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }
tempfile = "3.8"
