[package]
name = "faber-executor"
version = "0.1.0"
edition = "2024"


[dependencies]
faber-core = { path = "../core" }
faber-config = { path = "../config" }
faber-container = { path = "../container" }
thiserror = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
