[package]
name = "faber-runtime"
version = "0.1.0"
edition = "2024"
description = "Runtime execution engine for Faber"

[dependencies]
nix = { version = "0.30.1", features = [
    "process",
    "mount",
    "sched",
    "signal",
    "user",
    "fs",
    "hostname",
] }
caps = "0.5"
seccompiler = "0.4"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
