[package]
name = "faber"
version = "0.1.0"
edition = "2024"


[lib]
path = "src/lib.rs"

[dependencies]
nix = { version = "^0.30", features = [
    "process",
    "mount",
    "sched",
    "signal",
    "user",
    "fs",
    "hostname",

] }
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
caps = "0.5"
