[package]
name = "faber-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
faber-config = { path = "../config" }
faber-core = { path = "../core" }
faber-executor = { path = "../executor" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"
